Honor pref values when displaying bookmarks toolbar in Skeleton UI
Categories
(Firefox :: Bookmarks & History, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox85 | --- | unaffected |
firefox86 | --- | fixed |
firefox87 | --- | verified |
People
(Reporter: emalysz, Assigned: emalysz)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
We should honor the values for browser.toolbars.bookmarks.2h2020
and browser.toolbars.bookmarks.visibility
to correctly show the margins in the skeleton UI
Assignee | ||
Comment 1•3 months ago
|
||
Set release status flags based on info from the regressing bug 1686374
Updated•2 months ago
|
Pushed by emalysz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/104410a56d07 respect bookmarks.toolbars.bookmarks pref values to display bookmarks toolbar in skeleton UI r=dthayer
Comment 4•2 months ago
|
||
bugherder |
The patch landed in nightly and beta is affected.
:emalysz, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Updated•2 months ago
|
Assignee | ||
Comment 6•2 months ago
|
||
Comment on attachment 9199861 [details]
Bug 1689437, respect bookmarks.toolbars.bookmarks pref values to display bookmarks toolbar in skeleton UI
Beta/Release Uplift Approval Request
- User impact if declined: The skeleton UI can have slightly off margins if the user has the bookmarks toolbar enabled
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Conditions:
For windows startup only.
Ensure thebrowser.startup.preXulSkeletonUI
set is set to true
Enable bookmarks toolbar to only show on new tab (either through customization UI or by settingbrowser.toolbars.bookmarks.visibility
tonewtab
andbrowser.toolbars.bookmarks.2h2020
to true.
- Navigate to a page that is not about:home or about:newtab (try google). Ensure the bookmarks toolbar disappears
- Close firefox
- Start up firefox again, ensuring the skeleton UI is shown
- Notice the space where the bookmarks toolbar is reflected in the skeleton UI
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): No string changes
- String changes made/needed: n/a
Assignee | ||
Updated•2 months ago
|
Updated•2 months ago
|
Comment 7•2 months ago
|
||
I've managed to reproduce this bug using the steps from comment 6, on an affected Nightly build 87.0a1 (20210201094443). Thanks Emma, for the hints provided on slack.
The issue is verified as fixed on latest Nightly 87.0a1 (2021-02-09), under Windows 10 x64.
Comment 8•2 months ago
|
||
Emma, AFAIK, the skeleton UI is currently restricted to Nightly (https://searchfox.org/mozilla-beta/source/browser/app/profile/firefox.js#272-280). Do we need to uplift this patch to beta 86? Is there an 86 experiment with the Skeleton UI that would benefit from this uplift maybe? Thanks
Assignee | ||
Comment 9•2 months ago
|
||
Hey Pascal,
We're planning on running an experiment in 86 (Bug 1689450) with this pref turned on, so if it applies cleanly, we'd like to uplift
Comment 10•2 months ago
|
||
Comment on attachment 9199861 [details]
Bug 1689437, respect bookmarks.toolbars.bookmarks pref values to display bookmarks toolbar in skeleton UI
Low risk and needed by an experiment, approved for 86 beta 9.
Comment 11•2 months ago
|
||
bugherderuplift |
Description
•