Bug 1689437, respect bookmarks.toolbars.bookmarks pref values to display bookmarks toolbar in skeleton UI r=dthayer a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D103358