xpfe/appshell/AppWindow.cpp
@@ -1877,9 +1877,13 @@ nsresult AppWindow::MaybeSaveEarlyWindowPersistentValues(
   }
   settings.searchbarSpan = searchbar;
 
-  Element* bookmarksToolbar = doc->GetElementById(u"PersonalToolbar"_ns);
-  bookmarksToolbar->GetAttribute(u"collapsed"_ns, attributeValue);
-  settings.bookmarksToolbarShown = attributeValue.EqualsLiteral("false");
+  nsAutoString bookmarksVisibility;
+  Preferences::GetString("browser.toolbars.bookmarks.visibility",
+                         bookmarksVisibility);
+  settings.bookmarksToolbarShown =
+      bookmarksVisibility.EqualsLiteral("always") ||
+      (Preferences::GetBool("browser.toolbars.bookmarks.2h2020", false) &&
+       bookmarksVisibility.EqualsLiteral("newtab"));
 
   Element* menubar = doc->GetElementById(u"toolbar-menubar"_ns);
   menubar->GetAttribute(u"autohide"_ns, attributeValue);
